# icingcake

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: config.rs  main.rs
static/: script.js  script.js.map  script.ts  tsconfig.json
templates/: base.html  icinga_error.html  index.html  table.html
