[package]
name = "icingcake"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12" }
clap = { version = "4.2", features = ["derive"] }
form_urlencoded = { version = "1.1" }
from-to-repr = { version = "0.2", features = ["from_to_other"] }
hyper = { version = "0.14", features = ["http1", "http2", "server"] }
once_cell = { version = "1.17" }
percent-encoding = { version = "2.2" }
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.7" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", features = ["serde"] }
